@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto

skinparam classAttributeIconSize 0

'left to right direction

class Job {
    - String name

    + Job(name)
    - validateJob(job)
}

class RegisterJobController {

    + RegisterJobController()
    + registerJob(name)
}

class RegisterJobUI {
}

class Collaborator {
    -String name
    -Date dateOfBirth
    -Date admissionDate
    -String address
    -int phoneNumber
    -String email
    -int cc
    -int cardNumber

    + Collaborator(name, dateOfBirth, admissionDate, address, phoneNumber, email, cc, cardNumber)
}

class HumanResourcesManager {
}

class Repositories {

    - Repositories()
    + getInstance() : Repositories
    + getJobRepository()
}

class jobRepository {

    - addJob(job)
    - validateJob(job)
    + registerJob(name)
}

RegisterJobController .> Repositories : repositories
RegisterJobUI .> RegisterJobController
Repositories -> Repositories : instance
Repositories -> "1" jobRepository
jobRepository "1" --> "*" Job : job
Collaborator  <|--  HumanResourcesManager
RegisterJobController ..> "1" HumanResourcesManager : HumanResourcesManager
HumanResourcesManager <--  Job: createdBy
Collaborator "1" --> "*" Job : jobs


@enduml